--- a/en/meta.yml
+++ b/en/meta.yml
@@ -6,7 +6,7 @@ listed: false
 ingredient: false
 copyedit: false
 curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
-title: Beat the Goalie
+title: Beat the goalie
 description: How many goals can you score in 30 seconds?
 original_url: https://codeclubprojects.org/en-GB/scratch/beat-the-goalie
 interests: ''
@@ -16,10 +16,10 @@ steps:
 - title: Introduction
 - title: Moving the football
 - title: Was it a goal?
-- title: 'Challenge: Goal!'
+- title: "Challenge: goal!"
 - title: Adding a timer
-- title: 'Challenge: Adding a score'
+- title: "Challenge: adding a score"
 - title: Control the goalie
-- title: 'Challenge: More controls'
-- title: 'Challenge: Manual control'
+- title: "Challenge: more controls"
+- title: "Challenge: manual control"
 
