auto tag update

--- a/en/meta.yml
+++ b/en/meta.yml
@@ -5,14 +5,18 @@ duration: 2
 listed: false
 ingredient: false
 copyedit: false
-curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
+curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
 title: Beat the goalie
 description: How many goals can you score in 30 seconds?
 original_url: https://codeclubprojects.org/en-GB/scratch/beat-the-goalie
-interests: ''
+interests: games
 technologies: scratch
-site_areas: codeclub, scratch
-steps:
+site_areas: projects
+hardware: ''
+software: scratch
+version: 3
+last_tested: 2017-01-01
+steps: 
 - title: Introduction
 - title: Moving the football
 - title: Was it a goal?
@@ -22,4 +26,3 @@ steps:
 - title: Control the goalie
 - title: "Challenge: more controls"
 - title: "Challenge: manual control"
-
