--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,28 +1,19 @@
----
-hero_image: images/beat-the-goalie.png
-theme: blue
-duration: 2
-listed: true
-ingredient: false
-copyedit: false
-curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
 title: Beat the goalie
+hero_image: images/beat-the-goalie.png
 description: How many goals can you score in 30 seconds?
-original_url: https://codeclubprojects.org/en-GB/scratch/beat-the-goalie
-interests: games
-technologies: scratch
-site_areas: projects
-hardware: ''
-software: scratch
-version: 3
-last_tested: 2017-01-01
+listed: true
+copyedit: false
+version: 4
+last_tested: 2019-02-11
 steps: 
 - title: Introduction
 - title: Moving the football
 - title: Was it a goal?
-- title: "Challenge: goal!"
+- title: Goal!
 - title: Adding a timer
 - title: "Challenge: adding a score"
+  challenge: true
 - title: Control the goalie
-- title: "Challenge: more controls"
 - title: "Challenge: manual control"
+  challenge: true
+- title: What next? 
