--- a/el-GR/meta.yml
+++ b/el-GR/meta.yml
@@ -9,7 +9,7 @@ last_tested: 2019-02-11
 steps:
   - title: Εισαγωγή
   - title: Μετακίνηση ποδοσφαιριστή
-  - title: Τι είναι το γκολ;
+  - title: Ήταν γκολ;
   - title: Γκολ!
   - title: Προσθήκη χρονομέτρου
   - title: "Πρόκληση: Προσθήκη βαθμολογίας"
