--- a/de-DE/meta.yml
+++ b/de-DE/meta.yml
@@ -7,14 +7,16 @@ copyedit: false
 version: 4
 last_tested: 2019-02-11
 steps:
-  - title: Einleitung
-  - title: Den Fußball bewegen
-  - title: War das ein Tor?
-  - title: Tor!
-  - title: Hinzufügen eines Timers
-  - title: "Herausforderung: Hinzufügen eines Punktestands"
-    challenge: true
-  - title: Steuere den Torwart
-  - title: "Herausforderung: manuelle Steuerung"
-    challenge: true
-  - title: Was kommt als Nächstes?
+- title: Einleitung
+  completion: engaged
+- title: Den Fußball bewegen
+- title: War das ein Tor?
+- title: Tor!
+- title: Hinzufügen eines Timers
+- title: 'Herausforderung: Hinzufügen eines Punktestands'
+  challenge: true
+  completion: internal
+- title: Steuere den Torwart
+- title: 'Herausforderung: manuelle Steuerung'
+  challenge: true
+- title: Was kommt als Nächstes?
