--- a/el-GR/meta.yml
+++ b/el-GR/meta.yml
@@ -7,14 +7,16 @@ copyedit: false
 version: 4
 last_tested: 2019-02-11
 steps:
-  - title: Εισαγωγή
-  - title: Μετακίνηση ποδοσφαιριστή
-  - title: Ήταν γκολ;
-  - title: Γκολ!
-  - title: Προσθήκη χρονομέτρου
-  - title: "Πρόκληση: Προσθήκη βαθμολογίας"
-    challenge: true
-  - title: Έλεγξε τον τερματοφύλακα
-  - title: "Πρόκληση: χειροκίνητος έλεγχος"
-    challenge: true
-  - title: Τι υπάρχει στη συνέχεια;
+- title: Εισαγωγή
+  completion: engaged
+- title: Μετακίνηση ποδοσφαιριστή
+- title: Ήταν γκολ;
+- title: Γκολ!
+- title: Προσθήκη χρονομέτρου
+- title: 'Πρόκληση: Προσθήκη βαθμολογίας'
+  challenge: true
+  completion: internal
+- title: Έλεγξε τον τερματοφύλακα
+- title: 'Πρόκληση: χειροκίνητος έλεγχος'
+  challenge: true
+- title: Τι υπάρχει στη συνέχεια;
