--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,3 +1,4 @@
+---
 title: Beat the goalie
 hero_image: images/beat-the-goalie.png
 description: How many goals can you score in 30 seconds?
@@ -5,15 +6,17 @@ listed: true
 copyedit: false
 version: 4
 last_tested: 2019-02-11
-steps: 
+steps:
 - title: Introduction
+  completion: engaged
 - title: Moving the football
 - title: Was it a goal?
 - title: Goal!
 - title: Adding a timer
-- title: "Challenge: adding a score"
+- title: 'Challenge: adding a score'
   challenge: true
+  completion: internal
 - title: Control the goalie
-- title: "Challenge: manual control"
+- title: 'Challenge: manual control'
   challenge: true
-- title: What next? 
+- title: What next?
