--- a/fr-FR/meta.yml
+++ b/fr-FR/meta.yml
@@ -7,14 +7,16 @@ copyedit: false
 version: 4
 last_tested: 2019-02-11
 steps:
-  - title: Introduction
-  - title: Faire bouger la balle de foot
-  - title: C'est but ?
-  - title: But !
-  - title: Ajouter un chronomètre
-  - title: "Défi : ajouter un score"
-    challenge: true
-  - title: Contrôler le gardien de but
-  - title: "Défi : contrôle manuel"
-    challenge: true
-  - title: Et ensuite ?
+- title: Introduction
+  completion: engaged
+- title: Faire bouger la balle de foot
+- title: C'est but ?
+- title: But !
+- title: Ajouter un chronomètre
+- title: 'Défi : ajouter un score'
+  challenge: true
+  completion: internal
+- title: Contrôler le gardien de but
+- title: 'Défi : contrôle manuel'
+  challenge: true
+- title: Et ensuite ?
