--- a/hi-IN/meta.yml
+++ b/hi-IN/meta.yml
@@ -7,14 +7,16 @@ copyedit: false
 version: 4
 last_tested: 2019-02-11
 steps:
-  - title: परिचय
-  - title: फुटबॉल को हिलाना  
-  - title: क्या यह एक गोल था?
-  - title: गोल!
-  - title: टाइमर (timer) जोड़ना
-  - title: "चुनौती: एक अंक जोड़ना"
-    challenge: true
-  - title: गोलकीपर को नियंत्रित करें
-  - title: "चुनौती: मैनुअल नियंत्रण"
-    challenge: true
-  - title: आगे क्या है?
+- title: परिचय
+  completion: engaged
+- title: फुटबॉल को हिलाना
+- title: क्या यह एक गोल था?
+- title: गोल!
+- title: टाइमर (timer) जोड़ना
+- title: 'चुनौती: एक अंक जोड़ना'
+  challenge: true
+  completion: internal
+- title: गोलकीपर को नियंत्रित करें
+- title: 'चुनौती: मैनुअल नियंत्रण'
+  challenge: true
+- title: आगे क्या है?
