--- a/ja-JP/meta.yml
+++ b/ja-JP/meta.yml
@@ -7,14 +7,16 @@ copyedit: false
 version: 4
 last_tested: 2019-02-11
 steps:
-  - title: はじめに
-  - title: ボールを動かす
-  - title: ゴールできたでしょうか？
-  - title: ゴール！
-  - title: タイマーを追加 (ついか) する
-  - title: "チャレンジ: スコアをつける"
-    challenge: true
-  - title: ゴールキーパーを動かす
-  - title: "チャレンジ: 自分で動かす"
-    challenge: true
-  - title: 次は何をしましょうか？
+- title: はじめに
+  completion: engaged
+- title: ボールを動かす
+- title: ゴールできたでしょうか？
+- title: ゴール！
+- title: タイマーを追加 (ついか) する
+- title: 'チャレンジ: スコアをつける'
+  challenge: true
+  completion: internal
+- title: ゴールキーパーを動かす
+- title: 'チャレンジ: 自分で動かす'
+  challenge: true
+- title: 次は何をしましょうか？
