--- a/nl-NL/meta.yml
+++ b/nl-NL/meta.yml
@@ -7,14 +7,16 @@ copyedit: false
 version: 4
 last_tested: 2019-02-11
 steps:
-  - title: Inleiding
-  - title: De bal verplaatsen
-  - title: Was het een doelpunt?
-  - title: Goal!
-  - title: Een timer toevoegen
-  - title: "Uitdaging: score toevoegen"
-    challenge: true
-  - title: Bestuur de keeper
-  - title: "Uitdaging: handmatige bediening"
-    challenge: true
-  - title: Wat kun je verder nog doen?
+- title: Inleiding
+  completion: engaged
+- title: De bal verplaatsen
+- title: Was het een doelpunt?
+- title: Goal!
+- title: Een timer toevoegen
+- title: 'Uitdaging: score toevoegen'
+  challenge: true
+  completion: internal
+- title: Bestuur de keeper
+- title: 'Uitdaging: handmatige bediening'
+  challenge: true
+- title: Wat kun je verder nog doen?
