--- a/pt-BR/meta.yml
+++ b/pt-BR/meta.yml
@@ -7,14 +7,16 @@ copyedit: false
 version: 4
 last_tested: 2019-02-11
 steps:
-  - title: Introdução
-  - title: Movendo a bola
-  - title: Foi gol?
-  - title: Gol!
-  - title: Adicionando um temporizador
-  - title: "Desafio: adicionando um placar"
-    challenge: true
-  - title: Controle o goleiro
-  - title: "Desafio: controle manual"
-    challenge: true
-  - title: E agora?
+- title: Introdução
+  completion: engaged
+- title: Movendo a bola
+- title: Foi gol?
+- title: Gol!
+- title: Adicionando um temporizador
+- title: 'Desafio: adicionando um placar'
+  challenge: true
+  completion: internal
+- title: Controle o goleiro
+- title: 'Desafio: controle manual'
+  challenge: true
+- title: E agora?
