--- a/de-DE/meta.yml
+++ b/de-DE/meta.yml
@@ -8,15 +8,17 @@ version: 4
 last_tested: 2019-02-11
 steps:
 - title: Einleitung
-  completion: engaged
 - title: Den Fußball bewegen
 - title: War das ein Tor?
+  completion:
+  - engaged
 - title: Tor!
 - title: Hinzufügen eines Timers
 - title: 'Herausforderung: Hinzufügen eines Punktestands'
   challenge: true
-  completion: internal
 - title: Steuere den Torwart
+  completion:
+  - internal
 - title: 'Herausforderung: manuelle Steuerung'
   challenge: true
 - title: Was kommt als Nächstes?
