--- a/el-GR/meta.yml
+++ b/el-GR/meta.yml
@@ -8,15 +8,17 @@ version: 4
 last_tested: 2019-02-11
 steps:
 - title: Εισαγωγή
-  completion: engaged
 - title: Μετακίνηση ποδοσφαιριστή
 - title: Ήταν γκολ;
+  completion:
+  - engaged
 - title: Γκολ!
 - title: Προσθήκη χρονομέτρου
 - title: 'Πρόκληση: Προσθήκη βαθμολογίας'
   challenge: true
-  completion: internal
 - title: Έλεγξε τον τερματοφύλακα
+  completion:
+  - internal
 - title: 'Πρόκληση: χειροκίνητος έλεγχος'
   challenge: true
 - title: Τι υπάρχει στη συνέχεια;
