--- a/en/meta.yml
+++ b/en/meta.yml
@@ -8,15 +8,17 @@ version: 4
 last_tested: 2019-02-11
 steps:
 - title: Introduction
-  completion: engaged
 - title: Moving the football
 - title: Was it a goal?
+  completion:
+  - engaged
 - title: Goal!
 - title: Adding a timer
 - title: 'Challenge: adding a score'
   challenge: true
-  completion: internal
 - title: Control the goalie
+  completion:
+  - internal
 - title: 'Challenge: manual control'
   challenge: true
 - title: What next?
