--- a/es-LA/meta.yml
+++ b/es-LA/meta.yml
@@ -8,15 +8,17 @@ version: 4
 last_tested: 2019-02-11
 steps:
 - title: Introducción
-  completion: engaged
 - title: Moviendo la pelota de fútbol
 - title: "¿Fue un gol?"
+  completion:
+  - engaged
 - title: "¡Gol!"
 - title: Añadiendo un temporizador
 - title: 'Desafío: agregando un puntaje'
   challenge: true
-  completion: internal
 - title: Controla al arquero
+  completion:
+  - internal
 - title: 'Desafío: control manual'
   challenge: true
 - title: "¿Qué sigue?"
