--- a/ja-JP/meta.yml
+++ b/ja-JP/meta.yml
@@ -8,15 +8,17 @@ version: 4
 last_tested: 2019-02-11
 steps:
 - title: はじめに
-  completion: engaged
 - title: ボールを動かす
 - title: ゴールできたでしょうか？
+  completion:
+  - engaged
 - title: ゴール！
 - title: タイマーを追加 (ついか) する
 - title: 'チャレンジ: スコアをつける'
   challenge: true
-  completion: internal
 - title: ゴールキーパーを動かす
+  completion:
+  - internal
 - title: 'チャレンジ: 自分で動かす'
   challenge: true
 - title: 次は何をしましょうか？
