--- a/nl-NL/meta.yml
+++ b/nl-NL/meta.yml
@@ -8,15 +8,17 @@ version: 4
 last_tested: 2019-02-11
 steps:
 - title: Inleiding
-  completion: engaged
 - title: De bal verplaatsen
 - title: Was het een doelpunt?
+  completion:
+  - engaged
 - title: Goal!
 - title: Een timer toevoegen
 - title: 'Uitdaging: score toevoegen'
   challenge: true
-  completion: internal
 - title: Bestuur de keeper
+  completion:
+  - internal
 - title: 'Uitdaging: handmatige bediening'
   challenge: true
 - title: Wat kun je verder nog doen?
