--- a/uk-UA/meta.yml
+++ b/uk-UA/meta.yml
@@ -8,15 +8,17 @@ version: 4
 last_tested: 2019-02-11
 steps:
 - title: Вступ
-  completion: engaged
 - title: Рух м’яча
 - title: Що таке гол?
+  completion:
+  - engaged
 - title: Гол!
 - title: Додавання таймера
 - title: 'Завдання: додавання рахунку'
   challenge: true
-  completion: internal
 - title: Керування воротарем
+  completion:
+  - internal
 - title: 'Завдання: ручне керування'
   challenge: true
 - title: Що далі?
