--- a/en/meta.yml
+++ b/en/meta.yml
@@ -21,4 +21,6 @@ steps:
   - internal
 - title: 'Challenge: manual control'
   challenge: true
-- title: What next?
+- title: What can you do now?
+  completion:
+  - external
